Coverity analysis defect 49690: Resource leak

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A new defect has been detected and assigned to matt.kangas@10gen.com in Coverity Connect.
      http://coverity.mongodb.com//sourcebrowser.htm?projectId=10001#mergedDefectId=49690
      The defect was flagged by checker RESOURCE_LEAK in
      file /src/mongo/db/storage/storage_engine_lock_file_posix.cpp
      function mongo::StorageEngineLockFile::open()
      and this ticket was created by milkie

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: