SERVER-16760 fixed file descriptor check when opening lock file